# videoeditor

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_video.py
app/: main.py
core/: audio.py  segmentation.py  utils.py  video_io.py
