[project]
name = "videoeditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "opencv-python-headless>=4.8.1",
    "mediapipe==0.10.9",
    "numpy>=1.24.0,<2.0.0",
    "imageio-ffmpeg>=0.4.9",
    "pillow>=10.0.0",
]
